# mlx-meeting-assistant

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/prompts/: __init__.py  base.py  config.py  meeting_prompts.py  specialized.py
src/transcription_tool/: __init__.py  alignment.py  audio_preprocessing.py  cli.py  config.py  diarization.py  pipeline.py  summarization.py  transcription.py
