[project]
name = "mlx-meeting-assistant"
version = "0.1.0"
description = "CLI tool for audio/video transcription and summarization using MLX"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click>=8.2.1",
  "mlx>=0.26.1",
  "mlx-lm>=0.25.2",
  "mlx-whisper>=0.4.2",
]

[project.scripts]
transcription-tool = "transcription_tool.cli:main"
