[project]
name = "mlx-meeting-assistant"
version = "0.1.0"
description = "CLI tool for audio/video transcription and summarization using MLX"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click>=8.2.1",
  "huggingface-hub>=0.33.1",
  "mlx>=0.26.1",
  "mlx-lm>=0.25.2",
  "mlx-whisper>=0.4.2",
  "numpy>=2.2.6",
  "pyannote-audio>=3.3.2",
  "python-dotenv>=1.1.1",
  "torch>=2.7.1",
]

[project.scripts]
transcription-tool = "transcription_tool.cli:main"
meeting-assistant = "transcription_tool.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcription_tool", "src/prompts"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/README.md", "/pyproject.toml"]
